init pms
